# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: lint-and-test.yml
task_manager/: config.py  middleware.py  mixins.py  settings.py  urls.py  views.py
task_manager/apps/core/: apps.py  middleware.py  mixins.py  tests.py  text_constants.py  urls.py  views.py
task_manager/apps/labels/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/apps/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/core/: apps.py  text_constants.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: conftest.py  forms.py  models.py  pytst_attempt.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0004_alter_task_description.py  (+1 more)
task_manager/templates/: base.html  index.html  login.html  navbar.html
task_manager/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+43 files in other folders)
